--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,6 +44,7 @@ jobs:
     - name: make application-dev.properties
       if: contains(github.ref, 'develop') # develop branch일때 spring의 resources 경로로 이동후 application-dev.properties 파일 생성, GitHub-Actions에서 설정한 값을 application-dev.properties 파일에 쓰기
       run: |
+        mkdir ./src/main/resources
         cd ./src/main/resources
         touch ./application-dev.properties
         echo "${{ secrets.PROPERTIES_DEV }}" > ./application-dev.properties
@@ -53,6 +54,7 @@ jobs:
     - name: make application-prd.properties
       if: contains(github.ref, 'main') # main branch일때
       run: |
+          mkdir ./src/main/resources
           cd ./src/main/resources
           touch ./application-prd.properties
           echo "${{ secrets.PROPERTIES_PRD }}" > ./application-prd.properties
