--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -109,7 +109,7 @@ jobs:
         port: 22
         #key: ${{ secrets.PRIVATE_KEY }}
         script: |
-            sudo docker rm -f $(docker ps -qa)
+            var=$(docker ps -q) | [ -z "$var" ] && echo "no running containers" || sudo docker rm -f $var
             sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-dev
             docker-compose up -d
             docker image prune -f
