--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -92,7 +92,7 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
           script: |
-              var=$(docker ps -q) | [ -z "$var" ] && echo "no running containers" || sudo docker rm -f $var
+              var=$(docker ps -aq) | [ -z "$var" ] && echo "no running containers" || sudo docker rm -f $var
               sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-prd
               docker-compose up -d
               docker image prune -f
@@ -109,7 +109,7 @@ jobs:
         port: 22
         #key: ${{ secrets.PRIVATE_KEY }}
         script: |
-            var=$(docker ps -q) | [ -z "$var" ] && echo "no running containers" || sudo docker rm -f $var
+            var=$(docker ps -aq) | [ -z "$var" ] && echo "no running containers" || sudo docker rm -f $var
             sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-dev
             docker-compose -f up -d
             docker image prune -f
